# gemini-hak-creator-hub

./: .env.example  .gitignore  AGENT.md  PAGE_STRUCTURE.md  PRD.md  README.md  export-slides-images.cjs  export-slides-pdf.cjs  main.py  nvc_ch1_4.txt  nvc_ch9_13.txt  presentation_script.txt  presentation_script_vrew.txt  presentation_standalone.html  pyproject.toml
.agents/skills/dev/: SKILL.md
.agents/skills/new-component/: SKILL.md
.agents/skills/project-conventions/: SKILL.md
.agents/skills/review-pr/: SKILL.md
.claude/: settings.local.json
backend/: ARCHITECTURE.md  config.py  main.py
backend/graph/: pipeline.py  state.py
backend/graph/nodes/: analyze.py  fetch.py  prescreen.py  retrieval.py  validate.py
backend/graph/ontology/: __init__.py
backend/llm/: gemini.py  prompts.py  schemas.py
backend/models/: schemas.py
backend/prompts/: __init__.py  builders.py  loader.py
backend/prompts/templates/: comment_analysis_user.md  comment_analysis_user_no_context.md  comment_tagging_system.md
docs/: nvc_ch5_8.txt
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analysis/: page.tsx
frontend/src/lib/: gemini.ts  result-store.ts  toxicity-constants.ts  toxicity-prompt.ts  toxicity-types.ts  youtube.ts
frontend/src/logics/: index.ts  ontology.ts  prompt.ts  rules.ts
poc/: extract_bad_comments.py  main.py  state.py  youtube_data.py
scripts/: FUSEKI.md  channels.json  collect_comments.py  korean_profanity.py  run.bat  run.sh  start-fuseki.cmd  start-fuseki.ps1
(+26 files in other folders)
